--- a/ProjetoIndividual-GeoTech/web-data-viz/public/index.html
+++ b/ProjetoIndividual-GeoTech/web-data-viz/public/index.html
@@ -19,7 +19,7 @@
             </div>
             <ul class="navbarinicio">
                 <li>
-                    <a href="#">Inicio</a>
+                    <a href="#">Início</a>
                 </li>
                 <li>
                     <a href="sobre.html">Sobre</a>
@@ -45,7 +45,12 @@
     <div class="conteudoinicio">
         <h1 class="chamar" style="font-size: 40px;">Seja Bem-Vindo a GeoTech!</h1>
         <h1 class="chamar"> Explore o mundo e descubra os fascínios da geografia com a GeoTech!</h1>
-        <a  href="cadastro.html"><button class="btncomecar" >Começar!</button></a>
+        <div class="animacao">
+            <a href="cadastro.html"><button class="btncomecar">Começar!</button></a>
+            <img class="imgBotao"
+                src="https://r2.community.samsung.com/t5/image/serverpage/image-id/2858216iF966CF430D380489?v=v2"
+                alt="">
+        </div>
     </div>
 
     <div class="footer">
