--- a/ProjetoIndividual-GeoTech/web-data-viz/public/sobre.html
+++ b/ProjetoIndividual-GeoTech/web-data-viz/public/sobre.html
@@ -20,7 +20,7 @@
             </div>
             <ul class="navbarinicio">
                 <li>
-                    <a href="index.html">Inicio</a>
+                    <a href="index.html">Início</a>
                 </li>
                 <li>
                     <a href="sobre.html">Sobre</a>
