Indicador de Usuarios cadastrados por continente

--- a/ProjetoIndividual-GeoTech/web-data-viz/public/ProjetoIndividual-GeoTech/Site/SitePrincipal/index.html
+++ b/ProjetoIndividual-GeoTech/web-data-viz/public/ProjetoIndividual-GeoTech/Site/SitePrincipal/index.html
@@ -9,7 +9,7 @@
     <link rel="icon" href="../../../assets/GeoTech.png" type="image/png">
 </head>
 
-<body>
+<body onload="qtdUser()">
     <div class="header">
 
         <div class="container">
@@ -48,7 +48,7 @@
             <div class="continentes">
                 <img class="cardimg" src="https://upload.wikimedia.org/wikipedia/commons/thumb/8/86/Africa_%28orthographic_projection%29.svg/800px-Africa_%28orthographic_projection%29.svg.png" alt="">
                 <h5>África</h5>
-                <p class="quantidade">Usuarios:</p>
+                <p class="quantidade" id="userAfrica">Usuarios:</p>
                 <a href="Continentes/africa.html">
                     <button type="button" class="botaoGraficos">Ver Informações</button>
                   </a>
@@ -56,7 +56,7 @@
             <div class="continentes">
                 <img class="cardimg" src="https://upload.wikimedia.org/wikipedia/commons/thumb/4/43/Location_North_America.svg/250px-Location_North_America.svg.png" alt="">
                 <h5>América do Norte e Central</h5>
-                <p class="quantidade">Usuarios:</p>
+                <p class="quantidade" id="userAmericaN">Usuarios:</p>
                 <a href="Continentes/centroNorte.html">
                     <button type="button" class="botaoGraficos">Ver Informações</button>
                   </a>
@@ -64,7 +64,7 @@
             <div class="continentes">
                 <img class="cardimg" src="https://upload.wikimedia.org/wikipedia/commons/thumb/6/63/Latin_America_%28orthographic_projection%29.svg/1200px-Latin_America_%28orthographic_projection%29.svg.png" alt="">
                 <h5>América do Sul</h5>
-                <p class="quantidade">Usuarios:</p>
+                <p class="quantidade" id="userAmericaS">Usuarios:</p>
                 <a href="Continentes/sul.html">
                     <button type="button" class="botaoGraficos">Ver Informações</button>
                   </a>
@@ -74,7 +74,7 @@
             <div class="continentes">
                 <img class="cardimg" src="https://upload.wikimedia.org/wikipedia/commons/thumb/8/80/Asia_%28orthographic_projection%29.svg/250px-Asia_%28orthographic_projection%29.svg.png" alt="">
                 <h5>Ásia</h5>
-                <p class="quantidade">Usuarios:</p>
+                <p class="quantidade" id="userAsia">Usuarios:</p>
                 <a href="Continentes/asia.html">
                     <button type="button" class="botaoGraficos">Ver Informações</button>
                   </a>
@@ -82,7 +82,7 @@
             <div class="continentes">
                 <img class="cardimg" src="https://upload.wikimedia.org/wikipedia/commons/thumb/4/44/Europe_orthographic_Caucasus_Urals_boundary_%28with_borders%29.svg/250px-Europe_orthographic_Caucasus_Urals_boundary_%28with_borders%29.svg.png" alt="">
                 <h5>Europa</h5>
-                <p class="quantidade">Usuarios:</p>
+                <p class="quantidade" id="userEuropa">Usuarios:</p>
                 <a href="Continentes/europa.html">
                     <button type="button" class="botaoGraficos">Ver Informações</button>
                   </a>
@@ -90,7 +90,7 @@
             <div class="continentes">
                 <img class="cardimg" src="https://upload.wikimedia.org/wikipedia/commons/thumb/8/8e/Oceania_%28orthographic_projection%29.svg/250px-Oceania_%28orthographic_projection%29.svg.png" alt="">
                 <h5>Oceânia</h5>
-                <p class="quantidade">Usuarios:</p>
+                <p class="quantidade" id="userOceania">Usuarios:</p>
                 <a href="Continentes/oceania.html">
                     <button type="button" class="botaoGraficos">Ver Informações</button>
                   </a>
@@ -114,5 +114,134 @@
     const idUser = sessionStorage.ID_USUARIO;
     const emailUser = sessionStorage.EMAIL_USUARIO;
     const continenteUser = sessionStorage.CONTINENTE_USUARIO;
+
+    function qtdUser(){
+            africa()
+            asia()
+            americaN()
+            americaS()
+            europa()
+            oceania()
+        }
+
+        function africa() {
+            fetch("/usuarios/africa").then(function (resposta) {
+            if (resposta.ok) {
+                if (resposta.status == 204) {
+                    throw "Nenhum resultado encontrado!!";
+                }
+                resposta.json().then(function (resposta) {
+                    console.log("Dados recebidos: ", JSON.stringify(resposta));
+
+                    userAfrica.innerHTML = `Usuarios: ${resposta.continente}`;
+
+                });
+            } else {
+                throw ('Houve um erro na API!');
+            }
+        }).catch(function (resposta) {
+            console.error(resposta);
+        });
+        }
+
+        function asia() {
+            fetch("/usuarios/asia").then(function (resposta) {
+            if (resposta.ok) {
+                if (resposta.status == 204) {
+                    throw "Nenhum resultado encontrado!!";
+                }
+                resposta.json().then(function (resposta) {
+                    console.log("Dados recebidos: ", JSON.stringify(resposta));
+
+                    userAsia.innerHTML = `Usuarios: ${resposta.continente}`;
+
+                });
+            } else {
+                throw ('Houve um erro na API!');
+            }
+        }).catch(function (resposta) {
+            console.error(resposta);
+        });
+        }
+
+        function americaN() {
+            fetch("/usuarios/americaN").then(function (resposta) {
+            if (resposta.ok) {
+                if (resposta.status == 204) {
+                    throw "Nenhum resultado encontrado!!";
+                }
+                resposta.json().then(function (resposta) {
+                    console.log("Dados recebidos: ", JSON.stringify(resposta));
+
+                    userAmericaN.innerHTML = `Usuarios: ${resposta.continente}`;
+
+                });
+            } else {
+                throw ('Houve um erro na API!');
+            }
+        }).catch(function (resposta) {
+            console.error(resposta);
+        });
+        }
+
+        function americaS() {
+            fetch("/usuarios/americaS").then(function (resposta) {
+            if (resposta.ok) {
+                if (resposta.status == 204) {
+                    throw "Nenhum resultado encontrado!!";
+                }
+                resposta.json().then(function (resposta) {
+                    console.log("Dados recebidos: ", JSON.stringify(resposta));
+
+                    userAmericaS.innerHTML = `Usuarios: ${resposta.continente}`;
+
+                });
+            } else {
+                throw ('Houve um erro na API!');
+            }
+        }).catch(function (resposta) {
+            console.error(resposta);
+        });
+        }
+
+        function europa() {
+            fetch("/usuarios/europa").then(function (resposta) {
+            if (resposta.ok) {
+                if (resposta.status == 204) {
+                    throw "Nenhum resultado encontrado!!";
+                }
+                resposta.json().then(function (resposta) {
+                    console.log("Dados recebidos: ", JSON.stringify(resposta));
+
+                    userEuropa.innerHTML = `Usuarios: ${resposta.continente}`;
+
+                });
+            } else {
+                throw ('Houve um erro na API!');
+            }
+        }).catch(function (resposta) {
+            console.error(resposta);
+        });
+        }
+
+        function oceania() {
+            fetch("/usuarios/oceania").then(function (resposta) {
+            if (resposta.ok) {
+                if (resposta.status == 204) {
+                    throw "Nenhum resultado encontrado!!";
+                }
+                resposta.json().then(function (resposta) {
+                    console.log("Dados recebidos: ", JSON.stringify(resposta));
+
+                    userOceania.innerHTML = `Usuarios: ${resposta.continente}`;
+
+                });
+            } else {
+                throw ('Houve um erro na API!');
+            }
+        }).catch(function (resposta) {
+            console.error(resposta);
+        });
+        }
 
 </script>
