--- a/ProjetoIndividual-GeoTech/web-data-viz/public/ProjetoIndividual-GeoTech/Site/SitePrincipal/real.html
+++ b/ProjetoIndividual-GeoTech/web-data-viz/public/ProjetoIndividual-GeoTech/Site/SitePrincipal/real.html
@@ -56,7 +56,7 @@
                     <option value="Americas">Américas</option>
                     <option value="Asia">Ásia</option>
                     <option value="Europe">Europa</option>
-                    <option value="Oceania">Oceania</option>
+                    <option value="Oceania">Oceânia</option>
                 </select>
             </div>
             <div class="graficos1">
