--- a/ProjetoIndividual-GeoTech/web-data-viz/public/index.html
+++ b/ProjetoIndividual-GeoTech/web-data-viz/public/index.html
@@ -9,7 +9,7 @@
     <link rel="icon" href="./assets/GeoTech.png" type="image/png">
 </head>
 
-<body>
+<body onload="qtdUsers()">
     <div class="header">
 
         <div class="container">
